infra/modules/vpc/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 6.45.0"
    }
  }
}

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr_block
  enable_dns_hostnames = true
  enable_dns_support   = true

    tags = {
        Name = "paynest-vpc"
        Environment = var.environment
        Project = "paynest"
    }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.environment}-paynest-igw"
    Environment = var.environment
    Project = "paynest"
  }
}

resource "aws_subnet" "public" {
  count = length(var.availability_zones)

  vpc_id     = aws_vpc.main.id
  cidr_block = var.public_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.environment}-paynest-public-subnet"
    Environment = var.environment
    Project = "paynest"
  }
}

resource "aws_subnet" "private" {
  count = length(var.availability_zones)
  
  vpc_id     = aws_vpc.main.id
  cidr_block = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = {
    Name = "${var.environment}-paynest-private-subnet"
    Environment = var.environment
    Project = "paynest"
  }
}

resource "aws_eip" "nat" {
  domain = "vpc"

    tags = {
        Name = "${var.environment}-paynest-nat-eip"
        Environment = var.environment
        Project = "paynest"
    }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id

    tags = {
        Name = "${var.environment}-paynest-nat-gateway"
        Environment = var.environment
        Project = "paynest"
    }

    depends_on = [ aws_internet_gateway.gw ]
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "${var.environment}-paynest-public-rt"
    Environment = var.environment
    Project = "paynest"
  }
}


resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "${var.environment}-paynest-private-rt"
    Environment = var.environment
    Project = "paynest"
  }
}

resource "aws_route_table_association" "public" {
  count = length(aws_subnet.public)

  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  count = length(aws_subnet.private)

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
